# django-poetry-example

./: README.md  manage.py  pyproject.toml  scripts.py
django_poetry_example/pizza/: models.py
django_poetry_example/pizza/migrations/: 0001_initial.py
django_poetry_example/project/: settings.py
django_poetry_example/restaurant/: models.py
django_poetry_example/restaurant/migrations/: 0001_initial.py
tests/: conftest.py  test_django_poetry_example.py
tests/pizza/: fixtures.py  test_pizza.py
tests/restaurant/: fixtures.py  test_restaurants.py
