[tool.poetry]
name = "django-poetry-example"
version = "0.1.0"
description = ""
authors = ["kanu <kanu@zweckfrei.org>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
django-extensions = "^3.1.5"
ipdb = "^0.13.9"
black = "^22.3.0"
ipython = "^8.4.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_poetry_example.project.settings"
# set the django folder as pythonpath to solve import errors
pythonpath = "django_poetry_example"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
